@@ -10,13 +10,15 @@ import uzumtech.j_gcp.dto.request.UserRequestDto;
 import uzumtech.j_gcp.dto.response.MarkDeadResponseDto;
 import uzumtech.j_gcp.dto.response.UserResponseDto;
 import uzumtech.j_gcp.entity.User;
+import uzumtech.j_gcp.exception.InvalidBusinessLogicException;
+import uzumtech.j_gcp.exception.ResourceNotFoundException;
 import uzumtech.j_gcp.mapper.UserMapper;
 import uzumtech.j_gcp.repository.UserRepository;
 import uzumtech.j_gcp.service.UserService;
+import uzumtech.j_gcp.service.UserValidationService; // Добавили импорт
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,11 +27,15 @@ public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
     private final UserMapper userMapper;
+    private final UserValidationService userValidationService; // Внедряем сервис валидации
 
     @Override
     @Transactional
     public UserResponseDto createUser(UserRequestDto userRequestDto) {
-        // Маппер использует getFullName(), getAddress() и т.д.
+        // ПЕРВОЕ: Проверяем уникальность данных через валидатор
+        userValidationService.validateUniqueness(userRequestDto);
+
+        // ВТОРОЕ: Если валидация прошла (не вылетел Exception), сохраняем
         User user = userMapper.toEntity(userRequestDto);
         return userMapper.toResponseDto(userRepository.save(user));
     }
@@ -44,20 +50,20 @@ public class UserServiceImpl implements UserService {
     public UserResponseDto getUserById(Long id) {
         return userRepository.findById(id)
                 .map(userMapper::toResponseDto)
-                .orElseThrow(() -> new RuntimeException("User not found: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь с ID " + id + " не найден"));
     }
 
     @Override
     public UserResponseDto getUserByUserPinfl(String pinfl) {
         return userRepository.findByPinfl(pinfl)
                 .map(userMapper::toResponseDto)
-                .orElseThrow(() -> new RuntimeException("User not found with PINFL: " + pinfl));
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь с ПИНФЛ " + pinfl + " не найден"));
     }
 
     @Override
     public boolean isUserAlive(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь не найден"));
         return user.getDeathDate() == null;
     }
 
@@ -65,17 +71,22 @@ public class UserServiceImpl implements UserService {
     @Transactional
     public MarkDeadResponseDto markUserAsDead(Long id, LocalDate deathDate) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Пользователь не найден"));
+
+        if (deathDate != null && deathDate.isAfter(LocalDate.now())) {
+            throw new InvalidBusinessLogicException("Дата смерти не может быть в будущем");
+        }
 
         user.setDeathDate(deathDate);
         User savedUser = userRepository.save(user);
 
-        // Мапим в ваш MarkDeceasedResponseDto и перекладываем в MarkDeadResponseDto
-        var result = userMapper.toMarkDeadResponseDto(savedUser);
+        // Используем маппер
+        var info = userMapper.toMarkDeadResponseDto(savedUser);
 
         return MarkDeadResponseDto.builder()
-                .userId(user.getId())
-                .deathDate(user.getDeathDate())
+                .userId(savedUser.getId())
+                .deathDate(savedUser.getDeathDate())
+                .status("DECEASED")
                 .build();
     }
 
@@ -84,21 +95,21 @@ public class UserServiceImpl implements UserService {
         return userRepository.findAllByFullNameContainingIgnoreCase(fullName)
                 .stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserResponseDto> getAllAliveUsers() {
         return userRepository.findAllByDeathDateIsNull().stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserResponseDto> getAllDeadUsers() {
         return userRepository.findAllByDeathDateIsNotNull().stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -115,36 +126,35 @@ public class UserServiceImpl implements UserService {
     public List<UserResponseDto> getUsersWithExpiredDocuments() {
         return userRepository.findAllByExpiryDateBefore(LocalDate.now()).stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserResponseDto> getUsersWithDocumentsExpiringBetween(LocalDate start, LocalDate end) {
         return userRepository.findAllByExpiryDateBetween(start, end).stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserResponseDto> getUsersByDocumentType(DocumentType documentType) {
-        return List.of();
+        return userRepository.findAllByDocumentType(documentType)
+                .stream()
+                .map(userMapper::toResponseDto)
+                .toList();
     }
 
     @Override
     public List<UserResponseDto> getUsersByDocumentType(org.w3c.dom.DocumentType documentType) {
-        // Конвертируем системный DocumentType в ваш Enum, если они не совпадают
-        uzumtech.j_gcp.constant.DocumentType internalEnum =
-                uzumtech.j_gcp.constant.DocumentType.valueOf(documentType.toString());
-
-        return userRepository.findAllByDocumentType(internalEnum).stream()
-                .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+        // Конвертация системного типа в ваш Enum по имени
+        DocumentType type = DocumentType.valueOf(documentType.toString());
+        return getUsersByDocumentType(type);
     }
 
     @Override
     public List<UserResponseDto> getAliveUsersWithExpiredDocuments() {
         return userRepository.findAllByDeathDateIsNullAndExpiryDateBefore(LocalDate.now()).stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
